Fix Text being off centre

--- a/resources/style.css
+++ b/resources/style.css
@@ -7,12 +7,13 @@ html {
 }
 
 h2, h3, h4 {
+    text-align: center;
     padding-left: 1rem;
 }
 
 p {
-    max-width: 50%;
-    padding-left: 1rem;
+    text-align: center;
+    padding: 1rem;
     line-height: 20px;
 }
 
